@@ -69,6 +69,23 @@ public:
     int getMissionSpecificAnim(int missionnumber) const;
 
 protected:
+    enum MentatEyes {
+        MentatEyesNormal = 0,
+        MentatEyesLeft = 1,
+        MentatEyesRight = 2,
+        MentatEyesDown = 3,
+        MentatEyesClosed = 4
+    };
+
+
+    enum MentatMouth {
+        MentatMouthClosed = 0,
+        MentatMouthOpen1 = 1,
+        MentatMouthOpen2 = 2,
+        MentatMouthOpen3 = 3,
+        MentatMouthOpen4 = 4
+    };
+
     Uint32  nextSpecialAnimation;
 
     std::vector<std::string> mentatTexts;
